--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,12 +13,16 @@
     "firebase": "^8.2.10",
     "font-awesome": "^4.7.0",
     "google-maps-react": "^2.0.6",
+    "mobiscroll": "^3.0.0-beta6",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-animation": "^1.2.2",
     "react-animation-components": "^3.0.0",
+    "react-availability-calendar": "^0.3.13",
     "react-bootstrap": "^1.4.3",
     "react-crossfade-image": "^1.2.0",
+    "react-datetime-picker": "^3.1.0",
     "react-dom": "^17.0.1",
     "react-flippy": "^0.1.5",
     "react-image-fade-in": "^1.1.3",
@@ -33,6 +38,7 @@
     "react-social-icons": "^4.1.0",
     "react-spring": "^8.0.27",
     "react-transition-group": "^4.4.1",
+    "react-widgets": "^4.6.1",
     "reactstrap": "^8.8.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
